added show hidden to hamburger

--- a/src/index.html
+++ b/src/index.html
@@ -217,7 +217,7 @@
                             <i class="ui icon disk small"></i> Disk Summary
                         </a>
 
-                        <a class="item button hidden" id="btn_show_hidden_folders" title="Show hidden files and directories">
+                        <a class="item button" id="btn_show_hidden_folders" title="Show hidden files and directories">
                             <i class="ui icon eye small"></i> Show hidden
                         </a>
 
