dev log cleanup. minor updates

--- a/src/find.html
+++ b/src/find.html
@@ -99,7 +99,8 @@
 
 </div>
 <div id="search_info"></div>
-<div class="grid content" id="search_content" style="height:100%;">
+<progress id="search_progress" class="hidden" step="1" value="9" max="11"></progress>
+<div class="grid content" id="search_content">
     <div class="column sixteen wide" id="search_results_col">
         <div class="" id="search_results_card" style="border:none">
             <div class="content" id="search_results"></div>
