--- a/src/index.html
+++ b/src/index.html
@@ -369,7 +369,7 @@
 
         <aside id="sidebar" draggable="true" class="sidebar sidebar-left" tabindex="1">
 
-            <div id="sidebar_items" class="items" style="height: 100%">
+            <div id="sidebar_items" class="items">
             </div>
 
             <div style="display: flex;">
@@ -380,10 +380,10 @@
 
         <div id="draghandle" class="draghandle"></div>
 
-        <!-- MAIN VIEW -->
+        <!-- Main view -->
         <div class="border" id="main_view">
 
-            <!-- LOADER MESSAGE -->
+            <!-- Loader -->
             <div id="loader" class="ui centered loader"></div>
 
             <!-- Tabs view -->
@@ -391,19 +391,19 @@
                 <div class="fm tab-content" id="tab_content"></div>
             </div>
 
-            <!-- INFO VIEW -->
+            <!-- Info view -->
             <div class="view" id="info_view"></div>
 
-            <!-- LIST VIEW -->
+            <!-- List view -->
             <div class="view" id="list_view" style="margin-top: 5px"></div>
 
-            <!-- ICON VIEW -->
+            <!-- Icon view -->
             <div class="view" id="grid_view" style="margin-top: 10px">
 
                 <!-- FOLDERS -->
                 <div class="ui card fluid folders_card border-none" id="folders_card">
 
-                    <div class="content fluid">
+                    <!-- <div class="content fluid"> -->
 
                         <div class="ui grid stackable navigate" id="folder_grid">
                         </div>
@@ -412,7 +412,7 @@
                         </div>
 
 
-                    </div>
+                    <!-- </div> -->
 
                 </div>
 
@@ -428,7 +428,7 @@
 
             </div>
 
-            <!-- PAGING -->
+            <!-- Paging -->
             <div id="pager" class="" style="margin-left:20px; margin-top:10px"></div>
 
             <div class="ui inverted dimmer">
@@ -437,19 +437,19 @@
             <div id="msg"></div>
 
 
-            <!-- NOTICE -->
+            <!-- Notice -->
             <div class="hidden" id="notice"></div>
 
             <div class="inlinesearch">
                 <input spellcheck="true" type="text" id="txt_search" class="hidden" style="moz-border: 1px solid grey; background-color:#252525 !important;color:#ffffff" value="" placeholder="quick search">
             </div>
 
-            <!-- BOTTOM STATUS INFO -->
+            <!-- Bottom status info -->
             <div id="info" class="fixed bottom hidden">
                 <!--  -->
             </div>
 
-            <!-- PROGRESS BAR -->
+            <!-- Progress bar -->
             <div id="progress_div" class="hidden">
                 <div style="display: flex;">
                     <progress id="progress" class="hidden"></progress>
