use ext to get file icon

--- a/src/find.html
+++ b/src/find.html
@@ -10,7 +10,7 @@
 
 
     <div class="" style="margin-left: 20px; padding-right: 5px;">
-        <input type="text" id="find" spellcheck="false" class="find_input" placeholder="search" style="border:none">
+        <input type="text" id="find" tabindex="2" spellcheck="false" class="find_input" placeholder="search" style="border:none">
         <!-- <div contenteditable="true" class="input find_input"></div> -->
     </div>
 
