--- a/src/index.html
+++ b/src/index.html
@@ -300,7 +300,7 @@
                         <div class="breadcrumbs buttons">
                             <!-- MAKE SOME BREADCRUMB BUTTONS HERE -->
                         </div>
-                        <input class="" spellcheck="false" type="text" id="breadcrumbs" value="" />
+                        <input class="" spellcheck="false" type="text" id="breadcrumbs" tabindex="1" value="" />
                         <div id="breadcrumb_items" class="hidden"></div>
                     </div>
                 </div>
