--- a/src/index.html
+++ b/src/index.html
@@ -445,7 +445,7 @@
             </div>
 
             <!-- Bottom status info -->
-            <div id="info" class="fixed bottom hidden">
+            <div id="notification" class="fixed bottom hidden">
                 <!--  -->
             </div>
 
