--- a/src/find.html
+++ b/src/find.html
@@ -31,7 +31,6 @@
             <label class="">Files</label>
         </div> -->
 
-
         <div class="content fluid">
             <div class="description" style="padding-left: 15px !important">
                 <!-- <div class="ui header">
@@ -56,24 +55,24 @@
 
                     <div class="fields small">
                         <div class="eight wide field">
-                            <label class="label">Start date</label>
+                            <label class="label">Start Date</label>
                             <input type="date" id="start_date" name="start_date" class="find_input" placeholder="enter start date" title="enter start date">
                         </div>
 
                         <div class="eight wide field small">
-                            <label class="label">End date</label>
-                            <input type="date" id="end_date" name="end_date" class="find_input" placeholder="enter end date" title="enter end date">
+                            <label class="label">End Date</label>
+                            <input type="date" id="end_date" name="end_date" class="find_input" placeholder="enter end date" title="Searh by end date">
                         </div>
                     </div>
 
                     <div class="fields">
                         <div class="eight wide field small">
                             <label for="find_size" style="color:#cfcfcf" class="label">Size</label>
-                            <input type="text" id="find_size" class="find_input" placeholder="enter size" title="enter size">
+                            <input type="text" id="find_size" class="find_input" placeholder="Size" title="Search by size. Example: > 100">
                         </div>
                         <div class="eight wide field small">
-                            <label for="depth" style="color:#cfcfcf" class="label">Search depth</label>
-                            <input type="text" id="depth" class="find_input" placeholder="depth" title="enter depth of the search" value="1">
+                            <label for="depth" style="color:#cfcfcf" class="label" title="Number of levels to search">Depth</label>
+                            <input type="text" id="depth" class="find_input" placeholder="depth" title="Number of levels to search" value="1">
                         </div>
                     </div>
 
