--- a/src/index.html
+++ b/src/index.html
@@ -264,7 +264,7 @@
                 <!-- Settings -->
                 <div class="item right settings">
 
-                    <input class="slider" type="range" id="icon_size_selector" value="1" min="0" max="3" step="0" title="Adjust icon size"></ipnut>
+                    <input class="slider" type="range" id="icon_size_selector" value="1" min="0" max="4" step="0" title="Adjust icon size"></ipnut>
 
                     <a class="item" id="btn_hamburger_menu">
                         <i class="ui icon align justify"></i>
@@ -305,6 +305,9 @@
                     </div>
                 </div>
 
+                <!-- <div class="item"> -->
+                    <!-- <i class="icon history"></i> -->
+                <!-- </div> -->
 
                 <div class="item" id="status">
                     <!-- status information can go here -->
@@ -403,16 +406,11 @@
                 <!-- FOLDERS -->
                 <div class="ui card fluid folders_card border-none" id="folders_card">
 
-                    <!-- <div class="content fluid"> -->
+                    <div class="ui grid stackable navigate" id="folder_grid">
+                    </div>
 
-                        <div class="ui grid stackable navigate" id="folder_grid">
-                        </div>
-
-                        <div class="ui grid navigate hidden" id="hidden_folder_grid">
-                        </div>
-
-
-                    <!-- </div> -->
+                    <div class="ui grid navigate hidden" id="hidden_folder_grid">
+                    </div>
 
                 </div>
 
