core updates to support gio (gvfs)

--- a/src/confirm_delete.html
+++ b/src/confirm_delete.html
@@ -11,7 +11,7 @@
 <body>
 
     <div id="confirm_delete">
-        <p class="bold"><i class="icon warning circle"></i> Warning: This operation will permanetly delete your files!</p>
+        <p class="bold"><i class="icon warning circle"></i> Warning: This operation will permanetly delete</p>
         <div id="delete_files" class="delete">
 
         </div>
