--- a/src/index.html
+++ b/src/index.html
@@ -406,7 +406,7 @@
                     <div class="ui grid stackable navigate" id="folder_grid">
                     </div>
 
-                    <div class="ui grid navigate hidden" id="hidden_folder_grid">
+                    <div class="ui grid  stackable navigate hidden" id="hidden_folder_grid">
                     </div>
 
                 </div>
@@ -415,8 +415,8 @@
                 <div class="ui card fluid files_card border-none" id="files_card">
 
                     <div class="content">
-                        <div class="ui grid navigate" id="file_grid"></div>
-                        <div class="ui grid navigate hidden" id="hidden_file_grid"></div>
+                        <div class="ui grid stackable navigate" id="file_grid"></div>
+                        <div class="ui grid stackable navigate hidden" id="hidden_file_grid"></div>
                     </div>
 
                 </div>
@@ -436,7 +436,7 @@
             <div class="hidden" id="notice"></div>
 
             <div class="inlinesearch">
-                <input spellcheck="true" type="text" id="txt_search" class="hidden" style="moz-border: 1px solid grey; background-color:#252525 !important;color:#ffffff" value="" placeholder="quick search">
+                <input spellcheck="true" type="text" id="txt_search" class="hidden" value="" placeholder="quick search">
             </div>
 
             <!-- Bottom status info -->
