--- a/src/connect.html
+++ b/src/connect.html
@@ -10,24 +10,26 @@
 </head>
 <body>
 
-    <div class="connect">
+    <form method="post">
 
-        <select class="input" id="connection_type" class="select">
-            <option value="ssh">SSH</option>
-            <option value="smb">Windows Share</option>
-        </select>
-        <label class="label" for="txt_server">Connect to Server / Share</label>
-        <input class="input" type="text" id="txt_server" autocomplete="on" placeholder="IP Address or Machine Name">
-        <label class="label" for="txt_username">Username</label>
-        <input class="input" type="text" id="txt_username" placeholder="User Name">
-        <label class="label" for="txt_password">Password</label>
-        <input class="input" type="password" id="txt_password" placeholder="Password">
+        <div class="connect">
+            <select class="input" id="connection_type" class="select">
+                <option value="ssh">SSH</option>
+                <option value="smb">Windows Share</option>
+            </select>
+            <label class="label" for="txt_server">Connect to Server / Share</label>
+            <input class="input" type="text" id="txt_server" autocomplete="on" placeholder="IP Address or Machine Name">
+            <label class="label" for="txt_username">Username</label>
+            <input class="input" type="text" id="txt_username" placeholder="User Name">
+            <label class="label" for="txt_password">Password</label>
+            <input class="input" type="password" id="txt_password" placeholder="Password">
 
-        <div class="msg" id="connect_msg"></div>
+            <div class="msg" id="connect_msg"></div>
 
-        <input class="button absolute bottom" id="button_connect" type="button" value="Connect">
+            <input class="button absolute bottom" id="button_connect" type="submit" value="Connect">
+        </div>
 
-    </div>
+    </form>
 
 </body>
 </html>
