--- a/src/connect.html
+++ b/src/connect.html
@@ -24,6 +24,9 @@
             <label class="label" for="txt_password">Password</label>
             <input class="input" type="password" id="txt_password" placeholder="Password">
 
+            <input id="chk_pk" class="checkbox" type="checkbox">
+            <label for="chk_pk">Use Public Key Authentication</label>
+
             <div class="msg" id="connect_msg"></div>
 
             <input class="button absolute bottom" id="button_connect" type="submit" value="Connect">
