--- a/src/index.html
+++ b/src/index.html
@@ -440,17 +440,17 @@
             </div>
 
             <!-- Bottom status info -->
-            <div id="notification" class="fixed bottom hidden">
+            <div id="notification" class="fixed middle bottom hidden">
                 <!--  -->
             </div>
 
             <!-- Progress bar -->
             <div id="progress_div" class="hidden">
+                <div id="progress_msg" class=""></div>
                 <div style="display: flex;">
                     <progress id="progress" class="hidden"></progress>
                     <i id="cancel_operation" style="width:23px; height:23px;" class="ui icon times"></i>
                 </div>
-
             </div>
 
             <div class="fixed middle bottom">
