Upgraded electron version. GIo updates

--- a/src/index.html
+++ b/src/index.html
@@ -105,9 +105,9 @@
         <div class="" id="header_menus">
 
             <!-- FILE MENU -->
-            <div class="ui mini fixed menu borderless" id="file_menu" style="height:20px; margin-top:0px;">
-                <a class="item " id="home">
-                    <i class="icon bi-house small"></i>
+            <div class="ui mini fixed menu six fluid" id="file_menu" style="height:20px; margin-top:0px;">
+                <a class="item grey" id="home">
+                    <i class="icon bi-house small "></i>
                     Home
                 </a>
                 <a class="item" id="documents">
@@ -449,6 +449,7 @@
                 <div id="progress_msg" class=""></div>
                 <div style="display: flex;">
                     <progress id="progress" class="hidden"></progress>
+                    <!-- <input type="button" class="ui buttom small" value="cancel"> -->
                     <i id="cancel_operation" style="width:23px; height:23px;" class="ui icon times"></i>
                 </div>
             </div>
