Revaming sidebar home. Gio integration

--- a/src/index.html
+++ b/src/index.html
@@ -447,10 +447,10 @@
             <!-- Progress bar -->
             <div id="progress_div" class="hidden">
                 <div id="progress_msg" class=""></div>
-                <div style="display: flex;">
+                <div style="display: flex; height:23px;">
                     <progress id="progress" class="hidden"></progress>
-                    <!-- <input type="button" class="ui buttom small" value="cancel"> -->
-                    <i id="cancel_operation" style="width:23px; height:23px;" class="ui icon times"></i>
+                    <input type="button" id="cancel_operation" class="hidden" value="cancel">
+                    <!-- <i id="cancel_operation" style="width:23px; height:23px;" class="ui icon times"></i> -->
                 </div>
             </div>
 
