--- a/src/connect.html
+++ b/src/connect.html
@@ -29,7 +29,10 @@
 
             <div class="msg" id="connect_msg"></div>
 
-            <input class="button absolute bottom" id="button_connect" type="submit" value="Connect">
+            <!-- <div class="absolute bottom"> -->
+                <input class="button primary" id="button_close" type="button" value="Close">
+                <input class="button" id="button_connect" type="submit" value="Connect">
+            <!-- </div> -->
         </div>
 
     </form>
