list view updates

--- a/src/connect.html
+++ b/src/connect.html
@@ -10,6 +10,8 @@
 </head>
 <body>
 
+
+
     <form method="post">
 
         <div class="connect">
@@ -30,12 +32,13 @@
             <div class="msg" id="connect_msg"></div>
 
             <!-- <div class="absolute bottom"> -->
-                <input class="button primary" id="button_close" type="button" value="Close">
+                <!-- <input class="ui small button" id="button_close" type="button" value="Close"> -->
                 <input class="button" id="button_connect" type="submit" value="Connect">
             <!-- </div> -->
         </div>
 
     </form>
+
 
 </body>
 </html>
