added cancel for copy operation

--- a/src/index.html
+++ b/src/index.html
@@ -447,11 +447,13 @@
             <!-- Progress bar -->
             <div id="progress_div" class="hidden">
                 <div id="progress_msg" class=""></div>
+
                 <div style="display: flex; height:23px;">
                     <progress id="progress" class="hidden"></progress>
-                    <input type="button" id="cancel_operation" class="hidden" value="cancel">
+                    <input type="button" id="cancel_operation" class="button" value="cancel">
                     <!-- <i id="cancel_operation" style="width:23px; height:23px;" class="ui icon times"></i> -->
                 </div>
+
             </div>
 
             <div class="fixed middle bottom">
