--- a/src/confirm_delete.html
+++ b/src/confirm_delete.html
@@ -16,9 +16,9 @@
 
         </div>
 
-        <div class="fixed bottom" style="margin-bottom: 25px">
+        <div class="fixed bottom" style="margin-bottom: 25px; padding-top: 60px;">
             <input id="cancel_delete_button" tabindex="2" class="ui small button default" type="button" value="Cancel">
-            <input id="delete_button" tabindex="1" autofocus class="ui small button primary" type="button" value="Delete">
+            <input id="delete_button" tabindex="1" autofocus class="ui small button default" type="button" value="Delete">
         </div>
 
     </div>
