--- a/src/index.html
+++ b/src/index.html
@@ -446,12 +446,14 @@
 
             <!-- Progress bar -->
             <div id="progress_div" class="hidden">
-                <div id="progress_msg" class=""></div>
 
-                <div style="display: flex; height:23px;">
-                    <progress id="progress" class="hidden"></progress>
-                    <input type="button" id="cancel_operation" class="button" value="cancel">
-                    <!-- <i id="cancel_operation" style="width:23px; height:23px;" class="ui icon times"></i> -->
+                <div style="display: flex; padding: 5px">
+                    <div>
+                        <div id="progress_msg" class=""></div>
+                        <progress id="progress" class="hidden"></progress>
+                        <input type="button" id="cancel_operation" class="ui tiny red button" style="margin-left: auto;" value="cancel">
+                    </div>
+
                 </div>
 
             </div>
