--- a/src/connect.html
+++ b/src/connect.html
@@ -32,7 +32,7 @@
             <div class="msg" id="connect_msg"></div>
 
             <!-- <div class="absolute bottom"> -->
-                <!-- <input class="ui small button" id="button_close" type="button" value="Close"> -->
+                <input class="ui small button" id="button_close" type="button" value="Close">
                 <input class="button" id="button_connect" type="submit" value="Connect">
             <!-- </div> -->
         </div>
