--- a/src/index.html
+++ b/src/index.html
@@ -383,6 +383,12 @@
         <!-- Main view -->
         <div class="" id="main_view">
 
+            <div class="ui top attached tabular menu tiny hidden">
+                <a class="active item" data-tab="1"></a>
+            </div>
+
+
+
             <!-- Loader -->
             <div id="loader" class="ui centered loader"></div>
 
@@ -451,7 +457,7 @@
                     <div>
                         <div id="progress_msg" class=""></div>
                         <progress id="progress" class="hidden"></progress>
-                        <input type="button" id="cancel_operation" class="ui tiny red button" style="margin-left: auto;" value="cancel">
+                        <input type="button" id="cancel_operation" class="ui mini red button" style="margin-left: auto;" value="cancel">
                     </div>
 
                 </div>
