Update index.html & style.css : remove sidebar and minbar

--- a/src/index.html
+++ b/src/index.html
@@ -335,7 +335,7 @@
 
         </div>
 
-        <div id="minibar" class="">
+        <div id="minibar" class="" style="display: none">
 
             <div class="items">
 
@@ -367,7 +367,7 @@
 
         </div>
 
-        <aside id="sidebar" draggable="true" class="sidebar sidebar-left" tabindex="1">
+        <aside id="sidebar" draggable="true" class="sidebar sidebar-left" tabindex="1" style="display: none">
 
             <div id="sidebar_items" class="items">
             </div>
