--- a/src/index.html
+++ b/src/index.html
@@ -262,7 +262,7 @@
                 </div>
 
                 <!-- Settings -->
-                <div class="item right settings">
+                <div class="item right settings" style="display: none">
 
                     <input class="slider" type="range" id="icon_size_selector" value="1" min="0" max="4" step="0" title="Adjust icon size"></ipnut>
 
