Update git_rename_dialog.html : Resized Git Rename Dialog

--- a/src/git_rename_dialog.html
+++ b/src/git_rename_dialog.html
@@ -10,22 +10,21 @@
 </head>
 <body>
 
-    <div id="confirm_git_rename" class="container">
+    <div id="confirm_git_rename" style="padding: 20px">
         <div class="ui h5 warning">
             <i class="icon warning circle"></i> Rename this file to :
         </div>
 
-        <div>
+        <div style="padding: 20px;">
             <input id="git_rename_input" type="text">
         </div>
 
-        <div class="bottom footer">
+        <div>
             <input id="cancel_delete_button" tabindex="2" class="ui small button default" type="button" value="Cancel">
             <input id="delete_button" tabindex="1" autofocus class="ui small button default red" type="button" value="Delete">
         </div>
 
     </div>
-
 
 </body>
 </html>
