Implemented initial copy and delete functions

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
   <link rel="stylesheet" href="./node_modules/bootstrap-icons/font/bootstrap-icons.css">
   <link rel="stylesheet" href="./assets/css/index.css" />
-  <title>My Electron App</title>
+  <title></title>
 </head>
 <body>
     <div id="header_menu">
@@ -30,8 +30,17 @@
             <div id="folder_grid"></div>
             <div id="file_grid"></div>
 
-            <div class=""></div>
+            <div id="progress" class="bottom left hidden">
+                <div id="progress_msg"></div>
+
+                <progress id="progress_bar"></progress>
+            </div>
+            <div id="msg" class="bottom right hidden">ahhhhhhhhhh</div>
+
         </div>
+
+
+
     </div>
 
     <!-- <script src="index.js"></script> -->
