Update find.html : Delete blank attributes in find.html

--- a/src/find.html
+++ b/src/find.html
@@ -1,5 +1,5 @@
 <!-- SEARCH / FIND -->
-<div id="find_div" style="">
+<div id="find_div">
 
     <!-- FIND -->
     <div style="float:left; width:10px; height: 100%; text-align: center;">
@@ -9,7 +9,7 @@
     </div>
 
 
-    <div class="" style="margin-left: 20px; padding-right: 5px;">
+    <div style="margin-left: 20px; padding-right: 5px;">
         <input type="text" id="find" tabindex="2" spellcheck="false" class="find_input" placeholder="search" style="border:none">
         <!-- <div contenteditable="true" class="input find_input"></div> -->
     </div>
@@ -18,7 +18,7 @@
 
 
     <!-- FIND OPTIONS -->
-    <div id="find_options" class="">
+    <div id="find_options">
 
         <!--
         <div class="" style="width: 30%; display: flex; float: left;">
@@ -39,14 +39,14 @@
                 <div class="ui form tiny" style="background-color: transparent !important;">
                     <div class="fields">
                         <div class="eight wide field">
-                            <div class="">
+                            <div>
                                 <input spellcheck="false" type="checkbox" id="find_folders" name="find_folders">
                                 <label for="find_folders" class="label" style="font-weight: normal;">Folders</label>
                             </div>
                         </div>
 
                         <div class="eight wide field">
-                            <div class="">
+                            <div>
                                 <input type="checkbox" id="find_files" name="find_files">
                                 <label for="find_files" class="label" style="font-weight: normal;">Files</label>
                             </div>
